--- a/displayExercicio/index.html
+++ b/displayExercicio/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h2 class="produto">Carro: <span class="preco">R$ 1999</span></h2>
         <p class="texto">Carro modelo<span class="destaque"> 2045</span>, com <span class="destaque">200km</span> rodados.</p>
-        <button>Comprar Carro</button>
+        <button><a href="#">Comprar Carro</a></button>
     </div>
 
     <div class="container">
