refatorando projeto de posicioamento

--- a/posicionamento1/index.html
+++ b/posicionamento1/index.html
@@ -10,45 +10,49 @@
 </head>
 
 <body>
-    <h1 class="titulo">Bikcraft</h1>
-    <nav class="navigation">
-        <a href="#">SOBRE</a>
-        <a href="#">PRODUTOS</a>
-        <a href="#">LOJAS</a>
-        <a href="#">CONTATO</a>
-    </nav>
+    <header>
+        <h1 class="titulo">Bikcraft</h1>
+        <nav class="navigation">
+            <a href="#">SOBRE</a>
+            <a href="#">PRODUTOS</a>
+            <a href="#">LOJAS</a>
+            <a href="#">CONTATO</a>
+        </nav>
+    </header>
 
-    <div class="container">
-        <div class="info">
-            <span class="detalhe"></span>
-            <h2>Bicicletas Feitas a Mão</h2>
-            <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os
-                melhores acessórios da marca</p>
-            <a class="botao" href="#">VER MAIS</a>
+    <main>
+        <div class="container">
+            <div class="info">
+                <span class="detalhe"></span>
+                <h2>Bicicletas Feitas a Mão</h2>
+                <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
+                    com os
+                    melhores acessórios da marca</p>
+                <a class="botao" href="#">VER MAIS</a>
+            </div>
+            <img class="foto" src="../imagens/bicicleta.jpg" alt="Bicicleta Nimbus Stark">
+
+            <h2 class="subtitulo">Vantagens Bikcraft</h2>
+
+            <div class="vantagens">
+                <div class="vantagens-item">
+                    <img src="../imagens/eletrica.svg">
+                    <h3>Motor Elétrico</h3>
+                    <p>Permite você viajaer distâncias inimaginaveis com a sua bike </p>
+                </div>
+                <div class="vantagens-item">
+                    <img src="../imagens/velocidade.svg">
+                    <h3>40 Km/h.</h3>
+                    <p>A mais rápida bicicleta elétrica disponivel hoje no mercado. </p>
+                </div>
+                <div class="vantagens-item">
+                    <img src="../imagens/rastreador.svg">
+                    <h3>Rastreador</h3>
+                    <p>Rastreador e sistema anti-furto pára garantir o seu sossego </p>
+                </div>
+            </div>
         </div>
-
-        <img class="foto" src="../imagens/bicicleta.jpg" alt="Bicicleta Nimbus Stark">
-
-        <h2 class="subtitulo">Vantagens Bikcraft</h2>
-
-        <div class="vantagens">
-            <div class="vantagens-item">
-                <img src="../imagens/eletrica.svg">
-                <h3>Motor Elétrico</h3>
-                <p>Permite você viajaer distâncias inimaginaveis com a sua bike </p>
-            </div>
-            <div class="vantagens-item">
-                <img src="../imagens/velocidade.svg">
-                <h3>40 Km/h.</h3>
-                <p>A mais rápida bicicleta elétrica disponivel hoje no mercado. </p>
-            </div>
-            <div class="vantagens-item">
-                <img src="../imagens/rastreador.svg">
-                <h3>Rastreador</h3>
-                <p>Rastreador e sistema anti-furto pára garantir o seu sossego </p>
-            </div>
-        </div>
-    </div>
+    </main>
 
     <footer class="rodape">
         <p>Bikcraft. Alguns direitos Reservados.</p>
