--- a/posicionamento1/index.html
+++ b/posicionamento1/index.html
@@ -12,46 +12,54 @@
 <body>
     <header>
         <h1 class="titulo">Bikcraft</h1>
-        <nav class="navigation">
-            <a href="#">SOBRE</a>
-            <a href="#">PRODUTOS</a>
-            <a href="#">LOJAS</a>
-            <a href="#">CONTATO</a>
+
+        <nav aria-label="primaria">
+            <ul class="navigation">
+                <li><a href="#">SOBRE</a></li>
+                <li><a href="#">PRODUTOS</a></li>
+                <li><a href="#">LOJAS</a></li>
+                <li><a href="#">CONTATO</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
-        <div class="container">
+
+        <article class="container" aria-labelledby="label-info">
             <div class="info">
-                <span class="detalhe"></span>
-                <h2>Bicicletas Feitas a Mão</h2>
-                <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
+                <h1>Bicicletas Feitas a Mão</h1>
+                <p id="label-info">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
                     com os
                     melhores acessórios da marca</p>
                 <a class="botao" href="#">VER MAIS</a>
             </div>
+
             <img class="foto" src="../imagens/bicicleta.jpg" alt="Bicicleta Nimbus Stark">
 
-            <h2 class="subtitulo">Vantagens Bikcraft</h2>
+        </article>
 
-            <div class="vantagens">
-                <div class="vantagens-item">
+        <article class="container" aria-labelledby="label-vantagens">
+
+            <h2 id="label-vantagens" class="subtitulo">Vantagens Bikcraft</h2>
+            <ul class="vantagens">
+                <li class="vantagens-item">
                     <img src="../imagens/eletrica.svg">
                     <h3>Motor Elétrico</h3>
                     <p>Permite você viajaer distâncias inimaginaveis com a sua bike </p>
-                </div>
-                <div class="vantagens-item">
+                </li>
+                <li class="vantagens-item">
                     <img src="../imagens/velocidade.svg">
                     <h3>40 Km/h.</h3>
                     <p>A mais rápida bicicleta elétrica disponivel hoje no mercado. </p>
-                </div>
-                <div class="vantagens-item">
+                </li>
+                <li class="vantagens-item">
                     <img src="../imagens/rastreador.svg">
                     <h3>Rastreador</h3>
                     <p>Rastreador e sistema anti-furto pára garantir o seu sossego </p>
-                </div>
-            </div>
-        </div>
+                </li>
+            </ul>
+        </article>
+
     </main>
 
     <footer class="rodape">
