implementando com responsividade

--- a/posicionamento1/index.html
+++ b/posicionamento1/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
         <h1 class="titulo">Bikcraft</h1>
 
         <nav aria-label="primaria">
@@ -34,11 +34,11 @@
                 <a class="botao" href="#">VER MAIS</a>
             </div>
 
-            <img class="foto" src="../imagens/bicicleta.jpg" alt="Bicicleta Nimbus Stark">
+            <div class="container-imagem"><img class="foto" src="../imagens/bicicleta.jpg" alt="Bicicleta Nimbus Stark"></div>
 
         </article>
 
-        <article class="container" aria-labelledby="label-vantagens">
+        <article class="container container-vantagens" aria-labelledby="label-vantagens">
 
             <h2 id="label-vantagens" class="subtitulo">Vantagens Bikcraft</h2>
             <ul class="vantagens">
