--- a/flex-blog/index.html
+++ b/flex-blog/index.html
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section class="qualidade" id="qualidade">
+    <section class="qualidade container" id="qualidade">
         <div class="qualidade-item">
             <h2>Inteligente</h2>
             <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
@@ -169,7 +169,7 @@
             <p>assine e fique por dentro das novidades</p>
         </div>
 
-        <form action="">
+        <form action="" class="newsletter-form">
             <input type="text" placeholder="Seu e-mail">
             <button type="submit">Assinar</button>
         </form>
