--- a/flex-blog/index.html
+++ b/flex-blog/index.html
@@ -134,32 +134,38 @@
     <section class="qualidade container" id="qualidade">
         <div class="qualidade-item">
             <h2>Inteligente</h2>
-            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+                previsão</p>
         </div>
 
         <div class="qualidade-item">
             <h2>Compacto</h2>
-            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente</p>
+            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+                previsão das condições inegavelmente</p>
         </div>
 
         <div class="qualidade-item">
             <h2>Econômico</h2>
-            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+                previsão</p>
         </div>
 
         <div class="qualidade-item">
             <h2>Transparente</h2>
-            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+                previsão</p>
         </div>
 
         <div class="qualidade-item">
             <h2>Opaco</h2>
-            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente</p>
+            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+                previsão das condições inegavelmente</p>
         </div>
 
         <div class="qualidade-item">
             <h2>Sustentável</h2>
-            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+            <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+                previsão</p>
         </div>
     </section>
 
